--- a/demo.html
+++ b/demo.html
@@ -10,7 +10,7 @@
 	<script src="./jquery.input_hint.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		 $(document).ready(function() {
-			$('input.hint').input_hint({default_size: 20});
+			$('input.hint').input_hint();
 		});
 	</script>
 </head>
